--- a/python/BigData2022s2.ipynb
+++ b/python/BigData2022s2.ipynb
@@ -750,8 +750,22 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Desarrollando un mini juego\n",
-        "La idea principal del juego es descubrir un número generado aleatoriamente, determinando la cantidad de oportunidades que tengo para resolver el pusle, sumado a pistas, la idea final es encontrar el valor que se genero aleatoriamente"
+        "# Trabajo con Nota para el Proximo Jueves 27 de Octubre del 2022\n",
+        "# Desarrollando un mini juego.-\n",
+        "La idea principal del juego es descubrir un número generado aleatoriamente.\n",
+        "para esto, se debe:\n",
+        "1) Determinando la cantidad de oportunidades que tengo para resolver el pusle y los valores entre los que se generarán los números aleatorios.\n",
+        "2) Por cada iteración pedir un número\n",
+        "3) Entregar pistas como: El valor ingresado es Mayor o Menor al número ingresado\n",
+        "4) Finalmente entregar un mensaje si el problema se resolvio con exito o si perdio\n",
+        "\n",
+        "El juego termina cuando se terminan las oportunidades o al encontrar el valor que se genero en un inicio.\n",
+        "\n",
+        "Se evaluará el funcionamiento del código y los comentarios que agrege para entender lo que códifico\n",
+        "\n",
+        "Este se debe entregar en un repositorio de nombre trabajo_juego_python y la direccion de este debe ser enviado al correo amaru.fernandezd@utem.cl\n",
+        "\n",
+        "Trabajos muy parecidos serán evaludos con nota 1.0"
       ]
     },
     {
@@ -795,6 +809,29 @@
         "print(f\"El valor ingresado es de tipo {type(valor_ingresado)}\")\n",
         "valor_ingresado = int(valor_ingresado)\n",
         "print(f\"Ahora el valor es de tipo {type(valor_ingresado)}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El valor de i quedo en 3\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Deteniendo un for con break\n",
+        "\n",
+        "for i in range(10):\n",
+        "    if i == 3:\n",
+        "        break\n",
+        "\n",
+        "print(f\"El valor de i quedo en {i}\")"
       ]
     },
     {
